<resources>
    <string name="app_name">Proyecto_Grupaso</string>
    <string name="seleccioneTipo">Seleccione tipo:</string>
    <string name="especifiqueOtro">Si seleccionó otro, especifique:</string>
    <string name="marca">Marca</string>
    <string name="caracteristicas">Características</string>
    <string name="incluye">Incluye</string>
    <string name="cantidad">Cantidad</string>
    <string name="imagenDispositivo">Imagen del Dispositivo</string>

    <string name="agregar">Agregar</string>
    <string name="tomarFoto">Tomar Foto</string>
    <string name="agregarCarrete">Agregar desde Carrete</string>
    <string name="listo">Listo</string>
    <string name="nombreFoto">Indique nombre de foto</string>
    <string name="iniciarSesion">Iniciar Sesión</string>
    <string name="registrar">Registrar</string>
    <string name="agregarDispositivo">Agregar Dispositivo</string>
    <string name="filtrar">Filtrar</string>
    <string name="bienvenidaTI">Bienvenido/a usuario TI</string>
    <string name="gestionarDispositivos">Gestionar Dispositivos</string>
    <string name="visualizarPedidos">Visualizar Pedidos</string>
    <string name="visualizarPedidosSaludo">Aquí observa los pedidos pendientes de aprobación</string>
    <string name="aceptarSolicitud">Aceptar Solicitud</string>
    <string name="rechazarSolicitud">Rechazar Solicitud</string>
    <string name="asuntoMail">Respuesta a solicitud de reserva de recursos informáticos</string>
    <string name="respuestaAfirmativa">Felicidades, su solicitud fue aceptada.</string>
    <string name="respuestaNegativa">Lo sentimos, su solicitud fue rechazada.</string>
    <string name="editable">Editable</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="gestionDispositivos">Gestión de Dispositivos</string>
    <string name="IngresarModificaciones">Ingrese las modificaciones para el dispositivo</string>
    <string name="modificar">Modificar</string>
    <string name="verGPS"> Ver GPS</string>
    <string name="introduccion">Esta aplicación está diseñada para que los clientes registrados puedan
                                realizar solicitudes para préstamos de recursos informáticos (laptop, tablet, celular, etc.)
                                indicando el motivo de su solicitud y la dirección a donde se le debe hacer llegar.
                                Posteriormente, un administrador TI se encargará de evaluar las solicitudes y su respuesta
                                llegará a los clientes por notificaciones, y correo si así lo desee el cliente.</string>

    <string name="tituloMain">¡Bienvenido/a a la aplicación Grupaso!</string>
    <string name="finalMain">Favor, procede a registrarte como nuevo cliente. Si ya te has registrado anteriormente, inicia sesión.</string>
    <string name="historial">Historial de Solicitudes</string>

    <string-array name="Dispositivos">
        <item>Laptop</item>
        <item>Tableta</item>
        <item>Celular</item>
        <item>Monitor</item>
        <item>Otro</item>
    </string-array>

    <string-array name="Roles">
        <item>Alumno</item>
        <item>Docente</item>
        <item>Administrativo</item>

    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="salir">Salir</string>
    <string name="ingresar">Ingresar</string>
    <string name="title_activity_maps">Map</string>
    <string name="ok">OK</string>
    <string name="todo">TODO</string>
    <string name="cancelar">Cancelar</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo">Correo</string>
    <string name="c_digo">Código</string>
    <string name="crear_cuenta">Crear Cuenta</string>


</resources>