<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModificarDispositivo">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/NuevaFoto"
            android:layout_width="109dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:onClick="ModificarFoto"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="@+id/textView6"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/etNuevoCarac"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:srcCompat="@android:drawable/ic_menu_camera" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/IngresarModificaciones"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etNuevoMarca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/marca"
            android:inputType="textPersonName"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <EditText
            android:id="@+id/etNuevoCarac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/caracteristicas"
            android:inputType="textMultiLine"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/etNuevoMarca"
            app:layout_constraintStart_toStartOf="@+id/etNuevoMarca"
            app:layout_constraintTop_toBottomOf="@+id/etNuevoMarca" />

        <EditText
            android:id="@+id/etNuevoIncluye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/incluye"
            android:inputType="textMultiLine"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/etNuevoCarac"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/etNuevoCarac"
            app:layout_constraintTop_toBottomOf="@+id/etNuevoCarac" />

        <EditText
            android:id="@+id/etNuevoCant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/cantidad"
            android:inputType="number"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/etNuevoIncluye"
            app:layout_constraintStart_toStartOf="@+id/etNuevoIncluye"
            app:layout_constraintTop_toBottomOf="@+id/etNuevoIncluye" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:onClick="Cancelar"
            android:text="@string/cancelar"
            app:layout_constraintEnd_toStartOf="@+id/button7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etNuevoCant" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="24dp"
            android:onClick="ModificarDatos"
            android:text="@string/modificar"
            app:layout_constraintBottom_toBottomOf="@+id/button6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button6"
            app:layout_constraintTop_toTopOf="@+id/button6" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>