<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="6dp"
        app:cardElevation="10dp"
        app:contentPadding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvdispositivo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/editable"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvcorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/editable" />

            <TextView
                android:id="@+id/tvdireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/editable" />

            <TextView
                android:id="@+id/tvmotivo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/editable" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageMapa"
                        android:layout_width="62dp"
                        android:layout_height="55dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="20dp"
                        android:background="#2196F3"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@android:drawable/ic_menu_compass" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/btnAceptarSolicitud"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginTop="4dp"
                            android:text="@string/aceptarSolicitud"
                            android:textSize="12sp" />

                        <Button
                            android:id="@+id/btnRechazarSolicitud"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:text="@string/rechazarSolicitud"
                            android:textSize="12sp" />
                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>