<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cons1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="4dp"
        app:cardCornerRadius="3dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cons"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imagenDispositivo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.258"
                app:srcCompat="@drawable/common_google_signin_btn_icon_dark_normal" />

            <TextView
                android:id="@+id/marcaDispositivo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:text="iPhone XR"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imagenDispositivo"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/caracDispositivo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"
                android:text="Apple"
                android:textAllCaps="false"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imagenDispositivo"
                app:layout_constraintTop_toBottomOf="@id/marcaDispositivo" />

            <TextView
                android:id="@+id/cantidadDispositivo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"
                android:text="@string/editable"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/incluyeDispositivo"
                app:layout_constraintTop_toBottomOf="@+id/incluyeDispositivo" />

            <Button
                android:id="@+id/btnEditarDis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"
                android:text="@string/editar"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tipoDispositivoExt" />

            <Button
                android:id="@+id/btnEliminarDis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eliminar"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/btnEditarDis"
                app:layout_constraintTop_toBottomOf="@+id/btnEditarDis" />

            <TextView
                android:id="@+id/incluyeDispositivo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"
                android:text="TextView"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/caracDispositivo"
                app:layout_constraintTop_toBottomOf="@+id/caracDispositivo" />

            <TextView
                android:id="@+id/tipoDispositivoExt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="TextView"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/cantidadDispositivo"
                app:layout_constraintTop_toBottomOf="@+id/cantidadDispositivo" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>